fix text overflow on project tree

--- a/src/styles/Label.css
+++ b/src/styles/Label.css
@@ -14,11 +14,20 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
   .left {
 
     display: inline-flex;
     justify-content: space-between;
     width: 100%;
+
+    span {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
 
     .BasePairCount {
       margin-left: 0.25rem;
